Bug fixed
The section contact was having a small bug of id contact on which the nav contact button was working. So, the id has been added and styled which resulted in solving the Contact -heading and nav bar  overlapping problem.

--- a/styles.css
+++ b/styles.css
@@ -569,7 +569,11 @@ header {
   background-color: #0056b3;
 }
 
-
+/*contact section overlapping with nav fixed*/
+#contact{
+  margin-top: 30px;
+  padding-top: 100px;
+}
 
 .contact-form {
   display: flex;
